--- a/index.html
+++ b/index.html
@@ -827,6 +827,7 @@ gapminder<span class="op">$</span>mean.continent.GDP[gapminder<span class="op">$
 <ol type="1">
 <li>Each column is a variable.</li>
 <li>Each row is an observation.</li>
+<li>Each value is in its own cell.</li>
 </ol>
 </section>
 <section id="tidying-data-1" class="slide level2">
